Add snow effect to Christmas countdown page
Added a snow effect by including a new div and script.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
 
+  <div id="snow"></div>
+
   <h1>🎅 Contagem Regressiva para o Natal 🎄</h1>
   <p>Faltam exatamente:</p>
 
@@ -18,5 +20,6 @@
   </footer>
 
   <script src="script.js"></script>
+  <script src="snow.js"></script>
 </body>
 </html>
