Change countdown page to Christmas movies page

--- a/index.html
+++ b/index.html
@@ -3,23 +3,59 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contagem Regressiva para o Natal</title>
+  <title>Filmes de Natal</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-  <div id="snow"></div>
+  <h1>🎅 Filmes de Natal 🎄</h1>
 
-  <h1>🎅 Contagem Regressiva para o Natal 🎄</h1>
-  <p>Faltam exatamente:</p>
+  <div class="grid">
 
-  <div class="countdown" id="timer"></div>
+    <!-- FILME 1 -->
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/en/1/1b/Home_alone_poster.jpg" alt="Esqueceram de Mim">
+      <h3>Esqueceram de Mim</h3>
+      <a href="https://www.disneyplus.com" target="_blank">Assistir</a>
+    </div>
 
-  <footer>
-    <p>© 2025</p>
-  </footer>
+    <!-- FILME 2 -->
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/en/7/78/The_Grinch_poster.jpg" alt="O Grinch">
+      <h3>O Grinch</h3>
+      <a href="https://www.netflix.com" target="_blank">Assistir</a>
+    </div>
+
+    <!-- FILME 3 -->
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/en/e/e7/The_Polar_Express_%28film%29_poster.jpg" alt="O Expresso Polar">
+      <h3>O Expresso Polar</h3>
+      <a href="https://www.max.com" target="_blank">Assistir</a>
+    </div>
+
+    <!-- FILME 4 -->
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/en/9/9b/Elf_movie.jpg" alt="Um Duende em Nova York">
+      <h3>Um Duende em Nova York</h3>
+      <a href="https://www.amazon.com.br" target="_blank">Assistir</a>
+    </div>
+
+    <!-- FILME 5 -->
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/en/6/6f/The_Santa_Clause.jpg" alt="Meu Papai é Noel">
+      <h3>Meu Papai é Noel</h3>
+      <a href="https://www.disneyplus.com" target="_blank">Assistir</a>
+    </div>
+
+    <!-- FILME 6 -->
+    <div class="card">
+      <img src="https://upload.wikimedia.org/wikipedia/en/6/6c/Arthur_Christmas.jpg" alt="Operação Presente">
+      <h3>Operação Presente</h3>
+      <a href="https://www.netflix.com" target="_blank">Assistir</a>
+    </div>
+
+  </div>
 
   <script src="script.js"></script>
-  <script src="snow.js"></script>
 </body>
 </html>
